feat: Add frontend structure with React, ESLint, and Vite setup; include course scheduling logic and UI components

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   }
 }
